script refinements, connections
